# BluePanda

./: CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  Game.py  LICENSE  LICENSE-COMMERCIAL.md  NOTICE.md  README.md  SECURITY.md  index.html  pyproject.toml
BluePanda/: ARCHITECTURE.md  Config.py  Input.py  ResourceLoader.py  SceneTree.py  __init__.py  main.py
BluePanda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
BluePanda/Nodos/: AnimatedSprite2D.py  Area2D.py  Assets.py  Button.py  Camera2d.py  CharacterBody2D.py  CollisionShape2D.py  Color2d.py  Health.py  Label2d.py  Math2D.py  Nodo2d.py  Panel.py  ParticleEmitter2D.py  Patrol2D.py  PhysicsBody2D.py  Script.py  Sprite2d.py  StateMachine.py  Tags.py  Timer.py  __init__.py
BluePanda/core/: __init__.py  config.py  engine.py  input.py
BluePanda/nodes/: __init__.py
BluePanda/resources/: __init__.py  asset_cache.py  loader.py
BluePanda/scene/: __init__.py  tree.py
BluePanda/utils/: __init__.py  color.py  math2d.py
css/: styles.css
docs/: BluePanda__init__.md  Config.md  Nodos2D.md  Proyecto.md  README.md  UI.md  main.md
docs/Nodos/: AnimatedSprite2D.md  Area2D.md  Assets.md  Button.md  Camera2d.md  (+13 more)
examples/: ADVANCED.md  BASICS.md  advanced_01_groups_pause.py  advanced_02_patrol_health.py  advanced_03_particles_fsm_scheduler.py  advanced_04_declarative_events_signals.py  basic_01_hello_box.py  basic_02_player_movement.py  basic_03_pickups_and_events.py  basic_04_ui_button.py  scene_tree_resources_demo.py
html/: contacto.html  estudio.html  inicio.html  juegos.html
js/: app.js
(+36 files in other folders)
